# simple_tta

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  COPYING  Cargo.toml  README.md  assembler.py  bootmem.mem  simtop.sv  tta.core  tta_tb.sv
.github/workflows/: ci.yml
cmake/: HunterGate.cmake
crates/sideeffect-asm/: Cargo.toml
crates/sideeffect-asm/src/: assembler.rs  dataflow.rs  disasm.rs  lib.rs
crates/sideeffect-lisp/: Cargo.toml
crates/sideeffect-lisp/src/: compiler.rs  lib.rs  parser.rs  types.rs
crates/sideeffect-sim/: Cargo.toml
crates/sideeffect-sim/src/: lib.rs  lisp_runner.rs  main.rs  simulator.rs
crates/sideeffect-sim/tests/: lisp_integration_tests.rs  tta_integration_tests.rs  tta_property_tests.rs
crates/tta-asm/: Cargo.toml
crates/tta-asm/src/: dataflow.rs  lib.rs
crates/tta-sim/: Cargo.toml
crates/tta-sim/src/: lib.rs
crates/tta-sim/tests/: tta_property_tests.rs
rtl/: CMakeLists.txt  alu_unit.sv  barrier_unit.sv  blkram.sv  bus_if.sv  cmod-a35t-constraints.xdc  cmod_a35t_top.sv  common.vh  decoder.sv  execute.sv  muldiv_unit.sv  register_unit.sv  sequencer.sv  stack_unit.sv  tta.sv
simulator/: CMakeLists.txt  assembler.cc  assembler.h  clock_gen.cc  clock_gen.h  ram_sim.cc  ram_sim.h  rom_sim.cc  rom_sim.h  simtop.sv  simulator.cc  testtop.sv  tta_test.cc  uart_sim.cc  uart_sim.h
src/: assembler.rs  dataflow.rs  lib.rs  main.rs  main.rs~  simulator.rs
tests/: tta_integration_tests.rs  tta_property_tests.proptest-regressions  tta_property_tests.rs
