[package]
name = "sideeffect-sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "sideeffect_sim"

[[bin]]
name = "sideeffect-sim"
path = "src/main.rs"

[[bin]]
name = "sideeffect-lisp"
path = "src/lisp_runner.rs"

[dependencies]
sideeffect-asm = { path = "../sideeffect-asm" }
sideeffect-lisp = { path = "../sideeffect-lisp" }
marlin = { version = "0.7.2", features = ["verilog"] }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
camino = "1.1"
env_logger = "0.10"
rustyline = "14"

[dev-dependencies]
proptest = "1.4"
sideeffect-lisp = { path = "../sideeffect-lisp" }
